[gd_scene load_steps=3 format=3 uid="uid://doek8h0o1rjoe"]

[ext_resource type="Script" uid="uid://ck0wqqndmgr72" path="res://scenes/game_flip_tiles/flip_tiles.gd" id="1_5v0st"]
[ext_resource type="PackedScene" uid="uid://dj21lwt4gbsux" path="res://scenes/game_flip_tiles/flip_tiles_ui.tscn" id="2_j8wn6"]

[node name="FlipTiles" type="Node2D"]
script = ExtResource("1_5v0st")

[node name="FlipTilesUi" parent="." instance=ExtResource("2_j8wn6")]

[connection signal="flip_board_data" from="FlipTilesUi" to="." method="flip_board"]
[connection signal="init_board_data" from="FlipTilesUi" to="." method="init_board"]
